--- a/style.css
+++ b/style.css
@@ -23,6 +23,83 @@ body {
 }
 
 /* LAYOUT */
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 5rem 3rem;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  border-radius: 10px;
+  text-align: center;
+  width: 800px;
+  font-size: 20px;
+}
+
+.modal h2 {
+  margin-bottom: 20px;
+}
+
+.modal p {
+  margin-bottom: 20px;
+}
+
+.close-modal {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+.exclamation-container {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0px;
+}
+
+.exclamation {
+  font-size: 50px;
+  cursor: pointer;
+}
+
+.exclamation-container p {
+  opacity: 0.5;
+  margin-left: 0px;
+  visibility: hidden;
+  font-size: 18px;
+  color: white;
+  margin: 0;
+  background-color: #333;
+  padding: 5px 10px;
+  border-radius: 30px;
+  transition: opacity 0.5s, margin-left 0.5s;
+}
+
+.exclamation-container:hover p {
+  opacity: 1;
+  visibility: visible;
+  margin-left: 10px;
+}
+
 main {
   position: relative;
   width: 100rem;
@@ -172,12 +249,4 @@ main {
 
 .player--0 {
   position: relative;
-}
-
-.exclamation {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  font-size: 50px;
-  cursor: pointer;
 }
